# eas-reader

./: .gitignore  Dockerfile  README.md  config_example.json  eas-reader.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: eas-reader-AutoDeployTrigger-b9c61dd1-5a43-4e7b-b4a1-a396a36e7497.yml
data/: cfa_brigades.csv  cfa_frv_stations.csv  melways_utm_bounds.csv  melways_utm_prefixes.csv  paging_aliases.csv  state_utm_bounds.csv  state_utm_prefixes.csv
frontend/: eas_message.html  eas_message_table.css  pre_render.js
test/: test_msgs.json
