[project]
name = "eas-reader"
version = "0.1.0"
description = ""
authors = [
    {name = "Rowan Jones",email = "rowan@impermanent.io"}
]
package-mode = false

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-socketio (==4.6.1)",
    "requests (>=2.32.3,<3.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "pyproj (>=3.7.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
